fix(style - faq): refactor text content animation 1.4.2v - insert overflow hidden (nth-child: 3) to remove Y scroll

--- a/src/styles/root-style/reponsive-style/index/device-size/_desktop-p.scss
+++ b/src/styles/root-style/reponsive-style/index/device-size/_desktop-p.scss
@@ -352,6 +352,7 @@
                                 &:nth-child(3).active{
                                     .text-content{
                                         max-height: 279px;
+                                        overflow-y: hidden;
                                     }
                                 }
         
