--- a/src/styles/root-style/reponsive-style/index/index-responsive.css
+++ b/src/styles/root-style/reponsive-style/index/index-responsive.css
@@ -335,6 +335,7 @@
   }
   body .main-content-box .faq .container .content-box .accordion .line-question:nth-child(3).active .text-content {
     max-height: 279px;
+    overflow-y: hidden;
   }
   body .main-content-box .faq .container .content-box .accordion .line-question:nth-child(even).active .text-content {
     max-height: 50px;
